# ai-ml-2024-frontend

./: .env.sample  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
src/app/: page.tsx
src/app/api/gpt/: route.ts
src/app/component/: Form.tsx
src/global/: types.ts
src/services/: openai-service.ts
